--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Currículo Online - Lucas Bueno.</title>
-    <link rel="stylesheet" href="css/Main.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 
     <header>
         <div class="container">
-            <img src="Minha-foto.jpg" alt="Foto pessoal" class="foto">
+            <img src="minha-foto.jpg" alt="Foto pessoal" class="foto">
             <h1>Lucas Bueno Gonçalves Gomes.</h1>
             <p>Estudante da área de Tecnologia da Informação, interessado por experiências digitais intuitivas e eficientes, e inspirado por expandir o aprendizado em tecnolgia.</p>
         </div>
@@ -63,4 +63,5 @@
 
 </body>
 </html>
+
 
