--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Currículo Online - Lucas Bueno.</title>
-    <link rel="stylesheet" href="main.css">
+    <title>Meu Site Pessoal.</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 
     <header>
         <div class="container">
-            <img src="minha-foto.jpg" alt="Foto pessoal" class="foto">
+            <img src="minha-foto.jpg" alt="Minha foto" class="foto">
             <h1>Lucas Bueno Gonçalves Gomes.</h1>
             <p>Estudante da área de Tecnologia da Informação, interessado por experiências digitais intuitivas e eficientes, e inspirado por expandir o aprendizado em tecnolgia.</p>
         </div>
@@ -63,6 +63,7 @@
 
 </body>
 </html>
+
 
 
 
